# raw-image-processor

./: README.md  pyproject.toml
.github/workflows/: test.yml
raw_image_processor/: __init__.py  convert_images.py
src/: __init__.py  convert_images.py
tests/: test_raw_image_processor.py
tests/data/: test_example_frames.tar
